Fixed menu alignmenttttt
lmaoooo may naliligaw na center lang

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,6 @@ p,h1,h2,h3,h4,h5,h6,label,a,th,td
     height: 100%;
     width: 100%;
     
-    text-align: center;
 }
 
 .color-dark
